fixed gallery spacing

--- a/main.css
+++ b/main.css
@@ -223,11 +223,6 @@ div.logo {
   padding-right: 40px;
 }
 
-.galleryContainer {
-  margin-left: 100px;
-  margin-right: 100px;
-}
-
 .storeLink {
   text-decoration: none;
 }
